[package]
name = "libamdgpu_top"
license = "MIT"
description = "A library for amdgpu_top"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["libdrm_link"]
libdrm_link = ["libdrm_amdgpu_sys/link_drm"]
libdrm_dynamic_loading = ["libdrm_amdgpu_sys/dynamic_loading"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libdrm_amdgpu_sys = { version = "0.8.8", git = "https://github.com/Dr4kk3N/libdrm-amdgpu-sys-rs", default-features = false, rev = "cc2bae8a4f5d269c076e4fdc19e6b6c63d751385" }
nix = { version = "0", default-features = false, features = [ "ioctl" ] }
